--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
 
   <meta charset="utf-8">
   <meta property="description" name="description" content="">
+  <link href="../src/css/output.css" rel="stylesheet">
+
+
+
+
 </head>
 
 <body>
